# Frenetix-Motion-Planner

./: .gitignore  README.md  main.py  main_multiagent.py  pyproject.toml  requirements.txt
behavior_planner/: README.md  behavior_module.py
behavior_planner/utils/: FSM_logic_modules.py  FSM_model.py  helper_functions.py  helper_logging.py  path_planner.py  velocity_planner.py
configurations/: risk.json  walenet_config.json
configurations/defaults/: cost.yaml  debug.yaml  general.yaml  multiagent.yaml  occlusion.yaml  vehicle.yaml
configurations/example/: debug.yaml  general.yaml  occlusion.yaml  planning.yaml  prediction.yaml  sampling.yaml
configurations/frenetix_motion_planner/: cost.yaml  debug.yaml  planning.yaml
configurations/simulation/: behavior.yaml  evaluation.yaml  occlusion.yaml  prediction.yaml  simulation.yaml  visualization.yaml
cr_scenario_handler/: README.md
cr_scenario_handler/doxygen/: Doxyfile
cr_scenario_handler/evaluation/: agent_evaluation.py  metrics.py  simulation_evaluation.py
cr_scenario_handler/planner_interfaces/: __init__.py  frenet_interface.py  planner_interface.py  search_interface.py
cr_scenario_handler/simulation/: agent.py  agent_batch.py  simulation.py
cr_scenario_handler/utils/: agent_status.py  collision_check.py  collision_report.py  configuration.py  configuration_builder.py  evaluation.py  general.py  goalcheck.py  helper_functions.py  multiagent_helpers.py  multiagent_logging.py  prediction_helpers.py  sensor_model.py  utils_coordinate_system.py  velocity_planner.py  visualization.py
example_scenarios/: ZAM_Tjunction-1_100_T-1.xml  ZAM_Tjunction-1_23_T-1.xml  ZAM_Tjunction-1_24_T-1.xml  ZAM_Tjunction-1_27_T-1.xml  ZAM_Tjunction-1_36_T-1.xml  ZAM_Tjunction-1_42_T-1.xml  ZAM_Tjunction-1_8_T-1.xml  scenario1.xml  scenario2.xml  scenario3.xml  scenario4.xml  scenario_list.csv
frenetix_motion_planner/: planner.py  polynomial_trajectory.py  prediction_helpers.py  reactive_planner.py  reactive_planner_cpp.py  run_planner.py  sampling_matrix.py  state.py  trajectories.py
frenetix_motion_planner/cost_functions/: cost_function.py  partial_cost_functions.py
frenetix_motion_planner/occlusion_planning/: README.md  occlusion_module.py
frenetix_motion_planner/occlusion_planning/basic_modules/: occlusion_obstacles.py  uncertainty_map.py  visibility_module.py
frenetix_motion_planner/occlusion_planning/evaluation_modules/: phantom_module.py  uncertainty_map_evaluator.py  visibility_estimator.py
frenetix_motion_planner/occlusion_planning/utils/: occ_helper_functions.py  vis_helper_functions.py  visualization.py  visualize_cr_scenario.py
frenetix_motion_planner/utility/: helper_functions.py  load_json.py  logging_helpers.py  reachable_set.py  reachable_set_simple.py  responsibility.py  sensor_model.py  utils_coordinate_system.py  visualization.py
risk_assessment/: collision_probability.py  harm_estimation.py  risk_costs.py
risk_assessment/helpers/: coll_prob_helpers.py  collision_helper_function.py  harm_parameters.py  properties.py  timers.py
risk_assessment/utils/: gidas.py  logistic_regression.py  logistic_regression_asymmetrical.py  logistic_regression_symmetrical.py  reference_speed.py  reference_speed_asymmetrical.py  reference_speed_symmetrical.py  risk_calc.py
risk_assessment/visualization/: collision_visualization.py  risk_dashboard.py  risk_visualization.py
wale_net_lite/: geometry.py  preprocessing.py  visualization.py  wale-net.onnx  wale_net.py
